tests/samples/0065/error.txt
error[P0042]: unexpected token `[`, expected an expression
  --> 0065/code.ara:2:10
  |
2 |     $a = [1, 2, 3];
  |          ^ unexpected token `[`, expected an expression

